--- a/log_in/log_in.html
+++ b/log_in/log_in.html
@@ -14,7 +14,7 @@
     <!-- --------------- NAVBAR SECTION --------------- -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/accio/Order_Management/index.html">Order Status Management</a>
+            <a class="navbar-brand" href="https://pankaj-pilkhwal.github.io/OrderMangement/">Order Status Management</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
                 aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -22,12 +22,12 @@
             <div class="collapse navbar-collapse" id="navbarScroll">
                 <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="/accio/Order_Management/index.html">Home</a>
+                        <a class="nav-link" aria-current="page" href="https://pankaj-pilkhwal.github.io/OrderMangement/">Home</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
                     <li class="nav-item">
-                        <a class="nav-link" href="/accio/Order_Management/sign_up/sign_up.html">Sign Up</a>
+                        <a class="nav-link" href="https://pankaj-pilkhwal.github.io/OrderMangement/sign_up/sign_up.html">Sign Up</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="#">Log In</a>
